--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-on: release
+on: push
 
 jobs:
   publish:
@@ -10,7 +10,7 @@ jobs:
           node-version: 17
       - run: npm install
       - run: npm test
-      - run: npm build
+      - run: npm run build
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
