--- a/package.json
+++ b/package.json
@@ -1,1 +1,47 @@
-{"version":"0.2.0","license":"MIT","main":"dist/index.js","typings":"dist/index.d.ts","files":["dist"],"engines":{"node":">=10"},"scripts":{"start":"tsdx watch","build":"tsdx build","test":"tsdx test","lint":"tsdx lint","prepare":"tsdx build","publish":"npm publish --access=public"},"husky":{"hooks":{"pre-commit":"tsdx lint"}},"prettier":{"printWidth":80,"semi":true,"singleQuote":true,"trailingComma":"es5"},"name":"@fmented/scp","author":"fauky","module":"dist/scp.esm.js","devDependencies":{"husky":"^7.0.4","svelte":"^3.46.4","tsdx":"^0.14.1","tslib":"^2.3.1","typescript":"^3.9.10"}}
+{
+    "version": "0.2.0",
+    "license": "MIT",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "engines": {
+        "node": ">=10"
+    },
+    "scripts": {
+        "start": "tsdx watch",
+        "build": "tsdx build",
+        "test": "tsdx test",
+        "lint": "tsdx lint",
+        "prepare": "tsdx build"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "tsdx lint"
+        }
+    },
+    "prettier": {
+        "printWidth": 80,
+        "semi": true,
+        "singleQuote": true,
+        "trailingComma": "es5"
+    },
+    "name": "@fmented/scp",
+    "author": "fauky",
+    "module": "dist/scp.esm.js",
+    "devDependencies": {
+        "@types/estree": "^0.0.51",
+        "husky": "^7.0.4",
+        "svelte": "^3.46.4",
+        "tsdx": "^0.14.1",
+        "tslib": "^2.3.1",
+        "typescript": "^3.9.10"
+    },
+    "dependencies": {
+        "watch": "^1.0.2"
+    },
+    "bin": {
+        "scpd": "./bin/scp"
+    }
+}
